--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# .jpg images
+*.jpg
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -62,6 +65,7 @@ target/
 # Database
 *.db
 *.rdb
+*.json
 
 # Pycharm
 .idea
